# tokentax

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
docs/: cross-check-against-wmt24pp.md  methodology-and-limitations.md
results/: index.html  token-tax.json  token-tax.md
results/wmt24pp/: index.html  token-tax.json  token-tax.md
src/tokentax/: __init__.py  benchmark.py  check.py  cli.py  commands.py  corpus.py  corpus_sources.py  cross_check.py  html_assets.py  languages.py  ranking.py  report.py  report_html.py  report_tables.py  results.py  tokenizer_catalog.py  tokenizer_registry.py
tests/: test_benchmark_math.py  test_check_command.py  test_corpus_filtering.py  test_cross_check.py  test_cross_check_claims.py  test_readme_matches_results.py  test_report_rendering.py
